idk i made a modal from zero help + some useful class changes

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -48,4 +48,45 @@ main {
   font-size: 25px;
 }
 
+#modal {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  background-color: #2200fd;
+  color: #FFF;
+  margin: 15% auto;
+  padding: 20px;
+  border-radius: 10px;
+  width: 30%;
+  height: min-content;
+}
+.modal-content div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.modal-close {
+  color: white;
+  font-size: 28px;
+  font-weight: bold;
+}
+.modal-close:hover {
+  color: red;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 /*# sourceMappingURL=index.css.map */
