--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -60,8 +60,9 @@ main {
 
 .modal-content {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: space-between;
+  flex-direction: row;
   background-color: #2200fd;
   color: #FFF;
   margin: 15% auto;
@@ -72,9 +73,9 @@ main {
 }
 .modal-content div {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   width: 100%;
 }
 
