--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,14 @@ html, body {
     margin: 0;
 
     position: relative;
+
+    height:100vh;
+    background:
+        linear-gradient(to bottom right,transparent 50%,#fff 50%) 
+        0 0
+        /100% 100% 
+        no-repeat,
+    #0001FA;
 }
 
 header {
