--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,13 +17,13 @@ html, body {
         0 0
         /100% 100% 
         no-repeat,
-    #0001FA;
+    #0000b4;
 }
 
 header {
     height: 35px;
 
-    background-color: #0001FA;
+    background-color: #0000b4;
     color: #FFF;
 
     .row-align {
@@ -64,7 +64,7 @@ main {
         font-size: 1.2rem;
         
         color: #FFF;
-        background-color: #0001FA;
+        background-color: #0000b4;
     
         border: 1px solid #FFF;
         border-radius: 5px;
@@ -130,7 +130,7 @@ main {
 input {
     height: 2em;
 
-    border: 1px solid #0001FA;
+    border: 1px solid #0000b4;
     border-radius: 5px;
 
     padding: 5px;
@@ -187,7 +187,7 @@ input {
         button {
             width: 150px;
 
-            color: #0001FA;
+            color: #0000b4;
             background-color: #FFF;
             
             padding: 5px;
