--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -81,12 +81,56 @@ main {
   flex-direction: row;
 }
 #list-container .list-item label {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  padding: 5px;
-  margin-right: 5px;
+  display: block;
+  position: relative;
+  padding: 5px 15px 5px 35px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+#list-container .list-item label input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+#list-container .list-item label .chkbox {
+  position: absolute;
+  top: 5px;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  border: 1px solid #F1F1F1;
+  border-radius: 5px;
+}
+#list-container .list-item label:hover input ~ .chkbox {
+  background-color: #ccc;
+}
+#list-container .list-item label input:checked ~ .chkbox {
+  background-color: #2697f4;
+  border: none;
+}
+#list-container .list-item label .chkbox:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+#list-container .list-item label input:checked ~ .chkbox:after {
+  display: block;
+}
+#list-container .list-item label .chkbox:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 #list-container .list-item button {
   background-color: #FFF;
