--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,7 @@ html, body {
   padding: 0;
   margin: 0;
   position: relative;
+  font-family: "Roboto", sans-serif;
   height: 100vh;
   background: linear-gradient(to bottom right, transparent 50%, #fff 50%) 0 0/100% 100% no-repeat, #0000b4;
 }
