--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,8 @@ html, body {
 
     position: relative;
 
+    font-family: 'Roboto', sans-serif;
+
     height:100vh;
     background:
         linear-gradient(to bottom right,transparent 50%,#fff 50%) 
