--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -65,7 +65,10 @@ main {
 
 #list-container {
   width: 650px;
-  height: 250px;
+  height: min-content;
+  min-height: 250px;
+  max-height: 550px;
+  overflow: auto;
   padding: 35px;
   margin: 50px 30px 0 0;
   background-color: #414141;
@@ -80,6 +83,7 @@ main {
   align-items: center;
   justify-content: flex-start;
   flex-direction: row;
+  margin-bottom: 10px;
 }
 #list-container .list-item label {
   display: block;
