--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -78,6 +78,12 @@ main {
 #list-container h1 {
   font-size: 25px;
 }
+#list-container #products-list {
+  list-style-type: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  padding-inline-start: 0;
+}
 #list-container .list-item {
   display: flex;
   align-items: center;
