--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -106,6 +106,13 @@ main {
         font-size: 25px;
     }
 
+    #products-list {
+        list-style-type: none;
+        margin-block-start: 0;
+        margin-block-end: 0;
+        padding-inline-start: 0;
+    }
+
     .list-item {
         @include display-flex(flex-start);
 
