--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,11 +15,11 @@ html, body {
 
     height:100vh;
     background:
-        linear-gradient(to bottom right,transparent 50%,#fff 50%) 
+        linear-gradient(to bottom right,#0000b4 50%,#fff 50%) 
         0 0
-        /100% 100% 
+        /50% 100% 
         no-repeat,
-    #0000b4;
+    #FFF;
 }
 
 header {
