minor css changes

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,7 +4,7 @@ html, body {
   position: relative;
   font-family: "Roboto", sans-serif;
   height: 100vh;
-  background: linear-gradient(to bottom right, #0000b4 50%, #fff 50%) 0 0/50% 100% no-repeat, #FFF;
+  background: linear-gradient(to bottom right, #0000b4 50%, #fff 50%) 0 0/60% 100% no-repeat, #FFF;
 }
 
 header {
@@ -76,6 +76,7 @@ main {
   border-radius: 25px;
 }
 #list-container h1 {
+  margin-top: 0;
   font-size: 25px;
 }
 #list-container #products-list {
